IF (OPENGL_RENDERER)
    ADD_EXECUTABLE(pbrGL ConfigGL.cpp)
    TARGET_LINK_LIBRARIES(pbrGL PRIVATE pbr::pbr)
    TARGET_INCLUDE_DIRECTORIES(pbrGL PRIVATE ../)
ENDIF ()

IF (DIRECT3D11_RENDERER)
    ADD_EXECUTABLE(pbrD3d11 ConfigD3d11.cpp)
    TARGET_LINK_LIBRARIES(pbrD3d11 PRIVATE pbr::pbr)
    TARGET_INCLUDE_DIRECTORIES(pbrD3d11 PRIVATE ../)
ENDIF ()
