IF (OPENGL_RENDERER)
    ADD_EXECUTABLE(pbrGL ConfigGL.cpp)
    TARGET_LINK_LIBRARIES(pbrGL PRIVATE pbr::pbr)
    TARGET_INCLUDE_DIRECTORIES(pbrGL PRIVATE ${PROJECT_SOURCE_DIR}/source/pbr)
ENDIF ()

IF (DIRECT3D11_RENDERER)
    ADD_EXECUTABLE(pbrD3d11 ConfigD3d11.cpp)
    TARGET_LINK_LIBRARIES(pbrD3d11 PRIVATE pbr::pbr)
    TARGET_INCLUDE_DIRECTORIES(pbrD3d11 PRIVATE ${PROJECT_SOURCE_DIR}/source/pbr)
ENDIF ()

IF (METAL_RENDERER)
    # ADD_EXECUTABLE(pbrMt MACOSX_BUNDLE ConfigMt.cpp)
    ADD_EXECUTABLE(pbrMt ConfigMt.cpp)
    TARGET_LINK_LIBRARIES(pbrMt PRIVATE pbr::pbr)
    TARGET_INCLUDE_DIRECTORIES(pbrMt PRIVATE ${PROJECT_SOURCE_DIR}/source/pbr)
ENDIF ()
