FIND_PACKAGE(Vulkan REQUIRED FATAL_ERROR)
ADD_LIBRARY(vk_renderer
    ${CMAKE_CURRENT_SOURCE_DIR}/VkRenderer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/impl/VkRendererImpl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/impl/VkHelpers.cpp
)

TARGET_INCLUDE_DIRECTORIES(vk_renderer PRIVATE
    ${Vulkan_INCLUDE_DIRS}
    ${PROJECT_SOURCE_DIR}/source/pbr
    ${PROJECT_SOURCE_DIR}/external/glfw/include
)

TARGET_LINK_LIBRARIES(vk_renderer PRIVATE ${Vulkan_LIBRARIES})

TARGET_COMPILE_DEFINITIONS(vk_renderer PRIVATE -DDATA_DIR="${PROJECT_SOURCE_DIR}/data/")
